--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 env:
-  REGISTRY: "registry.digitalocean.com/sandbox-registry"
+  REGISTRY: "registry.digitalocean.com/echo-tg-bot"
   IMAGE_NAME: "docker_tg_bot"
   CONTAINER_NAME: "echo_bot"
 
