--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
             export TOKEN=${{ secrets.TELEGRAM_TOKEN }}
             export AUTH_SERVER_URL=${{ secrets.AUTH_SERVER_URL }}
             # Run a new container from a new image
-            docker run -e TOKEN -e CONSUMER_KEY -e AUTH_SERVER_URL -d \
+            docker-compose -f "docker-compose.yml" up -d \
             --restart always \
             --publish 80:80 \
             --name $(echo $CONTAINER_NAME) \
