--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,5 @@ jobs:
             export TOKEN=${{ secrets.TELEGRAM_TOKEN }}
             export AUTH_SERVER_URL=${{ secrets.AUTH_SERVER_URL }}
             # Run a new container from a new image
-            docker-compose -f "docker-compose.yml" up -d --build \
-            --restart always \
-            --publish 80:80 \
-            --name $(echo $CONTAINER_NAME) \
+            docker-compose -f "docker-compose.yml" up -d --name $(echo $CONTAINER_NAME) \
             $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
