Put github sha back and add print of it

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@v2
 
+      - name: Print GUTHUB_SHA
+        run: echo $(echo $GITHUB_SHA | head -c7)
+
       - name: Build container image
         run: docker build -t tgbot .
 
@@ -31,7 +34,7 @@ jobs:
 
       - name: Tag image
         run:
-          docker tag tgbot $(echo $REGISTRY)/$(echo $IMAGE_NAME):${{github.event.inputs.version }}
+          docker tag tgbot $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
       - name: Push image to DigitalOcean Container Registry
         run: docker push tgbot
