--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@v2
 
-      - name: Print GUTHUB_SHA
-        run: echo $(echo $GITHUB_SHA | head -c7)
+      - name: Print full path
+        run: echo $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
       - name: Build container image
         run: docker build -t tgbot .
