trying to push tag - tgbot and full path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           docker tag tgbot $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
       - name: Push image to DigitalOcean Container Registry
-        run: docker push tgbot
+        run: docker push tgbot $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
 #  deploy:
 #    runs-on: ubuntu-latest
