--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,11 @@ jobs:
         run:
           docker tag tgbot $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
+      - name: Print docker image
+          run: docker image ls
+
       - name: Push image to DigitalOcean Container Registry
-        run: docker push tgbot $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+        run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
 #  deploy:
 #    runs-on: ubuntu-latest
