--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,10 @@ jobs:
       - name: Push image to DigitalOcean Container Registry
         run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
+      - name: Print doctl registery
+        run: doctl registry repository list-tags
+
+
 #  deploy:
 #    runs-on: ubuntu-latest
 #    needs: build_and_push
