--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
       - name: Print doctl registery
-        run: doctl registry repository list-tags
+        run: doctl registry repository list-tags lt
 
 
 #  deploy:
