--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,31 +49,29 @@ jobs:
         run: docker image ls
 
 
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs: build_and_push
-#
-#    steps:
-#      - name: Deploy to Digital Ocean droplet via SSH action
-#        uses: appleboy/ssh-action@v0.1.3
-#        with:
-#          host: ${{ secrets.HOST }}
-#          username: ${{ secrets.USERNAME }}
-#          key: ${{ secrets.SSHKEY }}
-#          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,CONTAINER_NAME
-#          script: |
-##            # Login into Digital Ocean Registry
-#            docker login -u ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} -p ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} $(echo $REGISTRY)
-##            # Stop running container
-#            docker stop $(echo $CONTAINER_NAME)
-##            # Remove old container
-#            docker rm $(echo $CONTAINER_NAME)
-##            # Set env variables
-#            export TOKEN=${{ secrets.TELEGRAM_TOKEN }}
-#            export AUTH_SERVER_URL=${{ secrets.AUTH_SERVER_URL }}
-#            # Run a new container from a new image
-#            docker run -e TOKEN -e CONSUMER_KEY -e AUTH_SERVER_URL -d \
-#            --restart always \
-#            --publish 80:80 \
-#            --name $(echo $CONTAINER_NAME) \
-#            $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+
+    steps:
+      - name: Deploy to Digital Ocean droplet via SSH action
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEY }}
+          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,CONTAINER_NAME
+          script: |
+#            # Login into Digital Ocean Registry
+            docker login -u ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} -p ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} $(echo $REGISTRY)
+#            # Stop running container
+            docker stop $(echo $CONTAINER_NAME)
+#            # Remove old container
+            docker rm $(echo $CONTAINER_NAME)
+#            # Set env variables
+            export TOKEN=${{ secrets.TELEGRAM_TOKEN }}
+            export AUTH_SERVER_URL=${{ secrets.AUTH_SERVER_URL }}
+            # Run a new container from a new image
+            docker run -e TOKEN -e CONSUMER_KEY -e AUTH_SERVER_URL -d \
+            --name $(echo $CONTAINER_NAME) \
+            $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
