--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,13 +62,13 @@ jobs:
           key: ${{ secrets.SSHKEY }}
           envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,CONTAINER_NAME
           script: |
-#            # Login into Digital Ocean Registry
+            # Login into Digital Ocean Registry
             docker login -u ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} -p ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} $(echo $REGISTRY)
-#            # Stop running container
+            # Stop running container
             docker stop $(echo $CONTAINER_NAME)
-#            # Remove old container
+            # Remove old container
             docker rm $(echo $CONTAINER_NAME)
-#            # Set env variables
+            # Set env variables
             export TOKEN=${{ secrets.TELEGRAM_TOKEN }}
             export AUTH_SERVER_URL=${{ secrets.AUTH_SERVER_URL }}
             # Run a new container from a new image
