Add DDOCKER_NAME to tag andd to push commands

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,13 +37,13 @@ jobs:
 
       - name: Tag image
         run:
-          docker tag tgbot $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+          docker tag tgbot zaytsv/tgbot
 
       - name: Print docker image
         run: docker image ls
 
       - name: Push image to DigitalOcean Container Registry
-        run: docker push tgbot
+        run: docker push zaytsv/tgbot
 
       - name: Print docker image
         run: docker image ls
