--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,14 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@v2
 
+      - name: Print full path
+        run: echo $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+
       - name: Build container image
         run: docker build -t tgbot .
+
+      - name: Print docker image
+        run: docker image ls
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -31,13 +37,13 @@ jobs:
 
       - name: Tag image
         run:
-          docker tag tgbot zaytsv/tgbot
+          docker tag tgbot $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
       - name: Print docker image
         run: docker image ls
 
       - name: Push image to DigitalOcean Container Registry
-        run: docker push zaytsv/tgbot
+        run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
       - name: Print docker image
         run: docker image ls
