Added TOKEN env into existing name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,17 +55,14 @@ jobs:
     needs: build_and_push
 
     steps:
-      - name: execute token
-        env:
-          TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-
       - name: Deploy to Digital Ocean droplet via SSH action
         uses: appleboy/ssh-action@v0.1.3
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
-          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,CONTAINER_NAME
+          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,CONTAINER_NAME,
+            TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           script: |
             # Login into Digital Ocean Registry
             docker login -u ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} -p ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} $(echo $REGISTRY)
